--- a/main.css
+++ b/main.css
@@ -114,3 +114,67 @@ footer {
     text-align: center;
     margin-top: 20px;
 }
+
+@media (max-width: 768px) {
+    #financeForm {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #businessName,
+    #paymentType,
+    #amount,
+    button {
+        width: 90%;
+        margin: 10px 0;
+    }
+
+    main {
+        padding: 10px;
+    }
+
+    .eintrag {
+        flex-direction: column;
+    }
+
+    table, thead, tbody, th, td, tr {
+        display: block;
+    }
+
+    thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    tr {
+        border: 1px solid #ccc;
+        margin-bottom: 5px;
+    }
+
+    td {
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        /* padding-left: 50%; */
+        text-align: right;
+    }
+
+    td:before {
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+        text-align: left;
+        font-weight: bold;
+        content: attr(data-label);
+    }
+}
+
+@media (max-width: 480px) {
+    h2 {
+        font-size: 16px;
+    }
+}
