--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+:root {
+    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --text-color: #333;
+    --white: #fff;  
+    --background-header: url('./img/euro.jpg');
+    --padding-header: 1.25rem 0;
+}
+
 *,
 *::before,
 *::after {
@@ -6,54 +14,25 @@
     box-sizing: border-box;
 }
 
-html,
+html { font-size: 16px; }
+
 body {
+    font-family: var(--font-family);
+    color: var(--text-color);
     width: 100%;
     height: 100%;
+    background: var(--white);
 }
 
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #333;
-}
+.hidden { display: none; }
 
-video {
-    width: 100lvw;
-    height: 100lvh;
-}
-
-.video-background {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
-
-.hidden {
-    display: none;
-}
-
-.header-text-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100lvh;
-    width: 100vw;
-}
-
-rect {
-    width: 100vw;
-    height: 100lvh;
-}
-
-main {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.header {
+    height: 100vh;
+    background-image: var(--background-header);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: var(--padding-header);
 }
 
 #financeForm {
@@ -61,66 +40,53 @@ main {
     justify-content: space-evenly;
 }
 
-::placeholder {
-    color: #aaa;
-}
+::placeholder { color: #aaa; }
 
 #businessName,
 #paymentType,
 #amount,
 button {
-    padding: 0 5px;
+    padding: 0 .3125rem;
     font-size: 1.2em;
     font-weight: bold;
     border: none;
-    border-radius: 5px;
-    border-bottom: 2px solid #000;
+    border-radius: .3125rem;
+    border-bottom: .125rem solid #000;
     background: transparent;
-}
-
-#businessName,
-#paymentType,
-#amount:focus {
-    outline: none;
 }
 
 .eintrag {
     display: flex;
     justify-content: space-between;
-    margin: 50px 0;
+    margin: 3.125rem 0; 
     height: 100vh;
 }
 
-.eintrag td {
-    text-align: center;
-}
-
-button {
-    cursor: pointer;
-}
+button { cursor: pointer; }
 
 h1,
 h2 {
     font-weight: normal;
     text-transform: uppercase;
-    padding: 0 10px;
+    padding: 0 .625rem;
 }
 
 h1 {
-    font-size: 22px;
+    text-align: center;
+    color: #5cd65d;
+    font-family: monospace;
+    font-weight: 900;
+    letter-spacing: 5px;
+    text-shadow: 1px 1px 1px #000;
 }
 
 h2 {
-    font-size: 18px;
+    font-size: 1.125rem; 
 }
 
-.negative {
-    color: red;
-}
+.negative { color: red; }
 
-.info__viewer {
-    height: 100vh;
-}
+.info__viewer { height: 100vh; }
 
 table {
     width: 100%;
@@ -130,29 +96,20 @@ table {
 th,
 td {
     text-align: left;
-    padding: 8px;
+    padding: .5rem; 
     border: 1px solid #ddd;
-
-    box-shadow: rgba(114, 112, 112, 0.17) 0px -23px 25px 0px inset, rgba(107, 107, 107, 0.15) 0px -36px 30px 0px inset, rgba(85, 85, 85, 0.1) 0px -79px 40px 0px inset, rgba(102, 102, 102, 0.06) 0px 2px 1px, rgba(98, 98, 98, 0.09) 0px 4px 2px, rgba(99, 98, 98, 0.09) 0px 8px 4px, rgba(93, 92, 92, 0.09) 0px 16px 8px, rgba(118, 115, 115, 0.09) 0px 32px 16px;
 }
 
 th {
     background-color: #007bff;
-    color: #ffffff;
+    color: var(--white);
 }
 
 td[contenteditable="true"] {
     background-color: #f9f9f9;
 }
 
-tfoot td {
-    font-weight: bold;
-}
-
-footer {
-    text-align: center;
-    margin-top: 20px;
-}
+tfoot td { font-weight: bold; }
 
 @media (max-width: 768px) {
     #financeForm {
@@ -166,14 +123,6 @@ footer {
     button {
         width: 90%;
         margin: 10px 0;
-    }
-
-    main {
-        padding: 10px;
-    }
-
-    .eintrag {
-        flex-direction: column;
     }
 
     table,
@@ -193,7 +142,8 @@ footer {
 
     tr {
         border: 1px solid #ccc;
-        margin-bottom: 5px;
+        margin-bottom: 25px;
+        border: dashed 5px darksalmon;
     }
 
     td {
@@ -214,10 +164,25 @@ footer {
         font-weight: bold;
         content: attr(data-label);
     }
+
+    h1 { font-size: 24px; }
 }
 
 @media (max-width: 480px) {
-    h2 {
-        font-size: 16px;
+    h2 { font-size: 16px; }
+}
+
+@media (min-width: 768px) {
+    #financeForm {
+        width: 50%;
+    }
+
+    .info__viewer {
+        width: 50%;
+        overflow-y: auto;
+    }
+
+    .header {
+        background-size: contain;
     }
 }
