--- a/main.css
+++ b/main.css
@@ -37,8 +37,19 @@ body {
 
 #financeForm {
     width: 100%;
+    padding-bottom: 50px;
     display: flex;
+    margin-top: 25px;
     justify-content: space-evenly;
+}
+
+#financeForm input,
+#financeForm select {
+    padding: 1rem;
+    font-size: 1.2em;
+    border: none;
+    border-bottom: .125rem solid #000;
+    background: transparent;
 }
 
 ::placeholder { color: #aaa; }
@@ -60,6 +71,7 @@ button {
     cursor: pointer;
     background-color: #007bff;
     color: var(--white);
+    padding: 25px;
 }
 
 .total__sum_txt {
@@ -105,6 +117,7 @@ h2 {
 
 .info__viewer {
     height: max-content;
+    min-height: 50vh;
 }
 
 table {
