--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@ body {
     padding: var(--padding-header);
 }
 
-#financeForm {
+form#financeForm {
     width: 100%;
     padding-bottom: 50px;
     display: flex;
@@ -43,8 +43,8 @@ body {
     justify-content: space-evenly;
 }
 
-#financeForm input,
-#financeForm select {
+form#financeForm input,
+form#financeForm select {
     padding: 1rem;
     font-size: 1.2em;
     border: none;
@@ -52,7 +52,7 @@ body {
     background: transparent;
 }
 
-#financeForm input:focus {
+form#financeForm input:focus {
     outline: none;
     border-bottom: .125rem solid #007bff;
 }
@@ -150,70 +150,4 @@ tfoot td { font-weight: bold; }
 
 .kontoauszug tr {
     background: #5cd65c43;
-}
-
-@media (max-width: 768px) {
-    #financeForm {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #businessName,
-    #paymentType,
-    #amount,
-    button {
-        width: 90%;
-        margin: 10px 0;
-    }
-
-    table,
-    thead,
-    tbody,
-    th,
-    td,
-    tr {
-        display: block;
-    }
-
-    thead tr {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
-    }
-
-    tr {
-        margin-bottom: 50px;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    }
-
-    td {
-        border: none;
-        border-bottom: 1px solid #eee;
-        position: relative;
-        text-align: center;
-    }
-
-    td:before {
-        position: absolute;
-        top: 6px;
-        left: 6px;
-        width: 45%;
-        padding-right: 10px;
-        white-space: nowrap;
-        text-align: left;
-        font-weight: bold;
-        content: attr(data-label);
-    }
-
-    h1 { font-size: 24px; }
-}
-
-@media (max-width: 480px) {
-    h2 { font-size: 16px; }
-}
-
-@media (min-width: 768px) {
-    .header {
-        background-size: contain;
-    }
 }
